# audionet

./: .gitignore  .gitmodules  README.md  flake.nix  pyproject.toml  ssssss.py
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 356pjnj5cq4agadrcqpzbzvfkv4p2d8x-source  mbzcqzvs5gsvvp315rdqgp3h3sfca4yq-source  qqm24s5gn98f6rx9fx73bizldjkclyib-source
audionet/: client.py  drone_detection_model.h5  dumb_model.py  input.py  main.py  mel_features.py  mfcc_simple.py  params.py  predict.py  preprocess.py  scaler.pkl  server.py  ssssss.py  train.py  vgg.py
audionet/client/: client.py
audionet/preprocess/: featurevectorize.py  main.py  resample.py  resample_utilities.py  slim.py
sensor-client/: client.py
