[project]
name = "audionet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "resampy>=0.4.3",
    "scipy>=1.14.1",
    "tensorflow>=2.18.0",
    "tf-slim>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["audionet"]
