[project]
name = "audionet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyaudio>=0.2.14",
    "resampy>=0.4.3",
    "scipy>=1.14.1",
    "soundfile>=0.12.1",
    "tensorflow>=2.18.0",
    "tf-slim>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["audionet"]
